syntax = "proto3";
package Proto;
import "Objects/vehicle.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

message ParkDistanceResult {
  string parkName =  1;
  double distanceToTarget =  2;
  string location =  3;
  double longitude =  4;
  double latitude =  5;
}

message ParkingSpotCount {
  int32 motocycleCount =  1;
  int32 gplCount =  2;
  int32 electricCount =  3;
  int32 automobileCount =  4;
}

message CreateParkLogResult {
  string licencePlate =   1;
  string parkName =   2;
  google.protobuf.Timestamp startingTime =   3;
}

message UpdateParkingSpotStatusRequest {
  bool status =   1;
  int32 parkingSpotId =   2;
  google.protobuf.FieldMask fieldMask = 3;
}

message ParkingSpotsUpdateRequest {
  string parkName =   1;
  string licensePlate =   2;
  bool isEntrance =   3;
  google.protobuf.FieldMask fieldMask = 4;
}

message ParkCheckRequest {
  string licencePlate =   1;
  string parkName =   2;
  google.protobuf.FieldMask fieldMask = 3;
}

message PriceTable {
  string parkName =   1;
  double nightFee =   2;
  google.protobuf.Timestamp initialDate =   3;
  repeated LinePriceTable priceLines =   4;
}

message LinePriceTable {
  Period period =   1;
}

message Period {
  google.protobuf.Timestamp initialTime =   1;
  google.protobuf.Timestamp finalTime =   2;
  repeated Fractions fractionList =   3;
}

message Fractions {
  int32 order =   1;
  int32 minutes =   2;
  VehicleType vehicleType =   3;
  double price =   4;
}

message TaskResult {
	bool isSuccessful = 1;
}

message ListParkNames {
	repeated string parkNames = 1;
}

message GetInfoByParkName {
	string parkName = 1;
    google.protobuf.FieldMask fieldMask = 2;
}

message Park {
    optional int32 id = 1;
    optional int32 numberFloors = 2;
    optional string parkName = 3;
    optional double latitude = 4;
    optional double longitude = 5;
    optional string location = 6;
    optional google.protobuf.Timestamp openingTime = 7;
    optional google.protobuf.Timestamp closingTime = 8;
    optional bool isActive = 9;
    optional double nightFee = 10;
    optional PriceTable priceTable = 11;
    repeated ParkingSpot parkingSpots = 12;
}

message ParkingSpot {
    optional int32 parkingSpotId = 1;
    optional VehicleType vehicleType = 2;
    optional bool status = 3;
    optional int32 floorNumber = 4;
}

message ListPark {
	repeated Park parks = 1;
}

message ListParkingSpot {
	repeated ParkingSpot parkingSpots = 1;
}

message ListParkDistanceResult {
	repeated ParkDistanceResult parkDistance = 1;
}

message GetAllParksByDistanceRequest {
	double latitude = 1;
	double longitude = 2;
    google.protobuf.FieldMask fieldMask = 3;
}