syntax = "proto3";
package Proto;
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

message VehicleResult {
  string licensePlate =  1;
  string brand =  2;
  string model =  3;
  string type =  4;
}

message VehicleResults {
  repeated VehicleResult vehicles = 1;
}

enum VehicleType {
  Motocycle =  0;
  Automobile =  1;
  GPL =  2;
  Electric =  3;
}

message GetParkVehicleRequest {
  string park_name =  1;
  string licencePlate =  2;
}

message CreateVehicleRequest {
  string licensePlate =   1;
  string brand =   2;
  string model =   3;
  string type =   4;
  string username =   5;
  google.protobuf.FieldMask fieldMask = 6;
}